Failed attempt to change reference style

--- a/Annual Review 2019 Report/OneYearReport 0.3.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.3.tex
@@ -15,6 +15,7 @@
 \usepackage{cite}
 \usepackage{url}
 
+
 \linespread{1.3}
 
 \captionsetup[subfigure]{subrefformat=simple,labelformat=simple}
@@ -384,7 +385,7 @@ Writing additional papers is not included in this timeline, as this strongly dep
 
 \pagebreak
 
-\bibliographystyle{alpha}
+\bibliographystyle{agsm}
 \bibliography{mybib}
 
 %TODO: Uniformilize usage of I and We
