Successfully changed to Harvard references

--- a/Annual Review 2019 Report/mybib.bib
+++ b/Annual Review 2019 Report/mybib.bib
@@ -115,7 +115,7 @@
 
 @article{ruk2017,
    title = {Offshore Wind Project Timelines},
-   author={Renewable UK},
+   author={Renewable-UK},
    journal = {https://www.renewableuk.com/news/294516/Offshore-Wind-Project-Timelines.htm},
    year = {2017},
    note = {Accessed: 2019-03-24}
