--- a/Annual Review 2019 Report/OneYearReport 0.3.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.3.tex
@@ -385,7 +385,7 @@ Writing additional papers is not included in this timeline, as this strongly dep
 
 \pagebreak
 
-\bibliographystyle{agsm}
+\bibliographystyle{alpha}
 \bibliography{mybib}
 
 %TODO: Uniformilize usage of I and We
